--- a/rebar.config
+++ b/rebar.config
@@ -1,10 +1,9 @@
 {erl_opts, [nowarn_export_all,no_unused]}.
 {deps, [
-    {active,   ".*", {git, "git://github.com/synrc/active", [] }},
+%    {active,   ".*", {git, "git://github.com/synrc/active", [] }},
     {cowboy, ".*", {git, "git://github.com/voxoz/cowboy2", {tag,"master"}}},
     {rocksdb,".*",{git,"git://github.com/voxoz/rocks",{tag,"master"}}},
     {syn,      ".*", {git, "git://github.com/ostinelli/syn", {tag,"1.5.0"}}},
-    {sh,       ".*", {git, "git://github.com/synrc/sh",    [] }},
     {bert,     ".*", {git, "git://github.com/synrc/bert",    [] }},
     {kvx,      ".*", {git, "git://github.com/synrc/kvx",    [] }},
     {n2o,      ".*", {git, "git://github.com/synrc/n2o",    [] }},
