--- a/sys.config
+++ b/sys.config
@@ -1,4 +1,5 @@
-[{bert,[{js,"priv/static"}]},
+[{bert,[{js,"priv/static"},
+        {swift,"priv/swift"}]},
  {n2o,[{port,8042},
        {cowboy_spec,cow2},
        {app,review},
