--- a/sys.config
+++ b/sys.config
@@ -16,5 +16,5 @@
        {event,pickle}]},
  {kvx,[{dba, kvx_rocks},
        {dba_st, kvx_st},
-       {log_modules,[roster]},
-       {schema, [kvx,kvx_stream,roster]}]}].
+       {log_modules,[kvx,kvx_st,kvx_stream]},
+       {schema, [kvx,kvx_stream,chat]}]}].
